inline or block

--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
         <div> 
            <sub>test1</sub>
            <sub>test2</sub>
-            Answer:inlin:
+            Answer:inline:
        </div>
     </div>
     <script type="text/javascript" src="./script.js">
