--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div data-ns-attribute="block-inline-button">
+	<div data-ns-test="block-inline-button">
         <div>
             <button>test1</button>
             <button>test2</button>
              Answer:inline
         </div>
     </div>
-    <div data-ns-attribute="block-inline-div">
+    <div data-ns-test="block-inline-div">
         <div>
             <div>test1</div>
             <div>test2</div>
@@ -23,63 +23,63 @@
         
         </div>
     </div>
-    <div data-ns-attribute="block-inline-span">
+    <div data-ns-test="block-inline-span">
         <div>
             <span>test1</span>
             <span>test2</span>
             Answer:inline
         </div>
     </div>
-    <div data-ns-attribute="block-inline-p">
+    <div data-ns-test="block-inline-p">
          <div>
             <p>test1</p>
             <p>test2</p>
             Answer:block
          </div>
     </div>
-    <div data-ns-attribute="block-inline-input">
+    <div data-ns-test="block-inline-input">
         <div>
             <input type="text" name="test1">
             <input type="text" name="test2">
             Answer:inline
         </div>
     </div>
-    <div data-ns-attribute="block-inline-cite">
+    <div data-ns-test="block-inline-cite">
         <div>
             <cite>test1</cite>
             <cite>test2</cite>
             Answer:inline
         </div>
     </div>
-    <div data-ns-attribute="block-inline-cite">
+    <div data-ns-test="block-inline-cite">
         <div>
             <code>test1</code>
             <code>test2</code>
             Answer:inline
         </div>
     </div>
-    <div data-ns-attribute="block-inline-p">
+    <div data-ns-test="block-inline-p">
         <div>
             <p>test1</p>
             <p>test2</p>
             Answer:block
         </div>
     </div>
-    <div data-ns-attribute="block-inline-h1">
+    <div data-ns-test="block-inline-h1">
         <div>
             <h1>test1</h1>
             <h1>test2</h1>
             Answer:block
         </div>
     </div>
-    <div data-ns-attribute="block-inline-sup">
+    <div data-ns-test="block-inline-sup">
         <div>
             <sup>test1</sup>
             <sup>test2</sup>
             Answer:inline
         </div>
     </div>
-    <div data-ns-attribute="block-inline-sub">
+    <div data-ns-test="block-inline-sub">
         <div> 
            <sub>test1</sub>
            <sub>test2</sub>
