--- a/main.html
+++ b/main.html
@@ -10,79 +10,79 @@
 	<!-- the entire body must be written by student -->
 	<div data-ns-test="block-inline-button">
         <div>
-            <button>test1</button>
-            <button>test2</button>
+            <button>Test1</button>
+            <button>Test2</button>
              Answer:inline
         </div>
     </div>
     <div data-ns-test="block-inline-div">
         <div>
-            <div>test1</div>
-            <div>test2</div>
+            <div>Test1</div>
+            <div>Test2</div>
             Answer:block
         
         </div>
     </div>
     <div data-ns-test="block-inline-span">
         <div>
-            <span>test1</span>
-            <span>test2</span>
+            <span>Test1</span>
+            <span>Test2</span>
             Answer:inline
         </div>
     </div>
     <div data-ns-test="block-inline-p">
          <div>
-            <p>test1</p>
-            <p>test2</p>
+            <p>Test1</p>
+            <p>Test2</p>
             Answer:block
          </div>
     </div>
     <div data-ns-test="block-inline-input">
         <div>
-            <input type="text" name="test1">
-            <input type="text" name="test2">
+            <input type="text" name="Test1">
+            <input type="text" name="Test2">
             Answer:inline
         </div>
     </div>
     <div data-ns-test="block-inline-cite">
         <div>
-            <cite>test1</cite>
-            <cite>test2</cite>
+            <cite>Test1</cite>
+            <cite>Test2</cite>
             Answer:inline
         </div>
     </div>
     <div data-ns-test="block-inline-cite">
         <div>
-            <code>test1</code>
-            <code>test2</code>
+            <code>Test1</code>
+            <code>Test2</code>
             Answer:inline
         </div>
     </div>
     <div data-ns-test="block-inline-p">
         <div>
-            <p>test1</p>
-            <p>test2</p>
+            <p>Test1</p>
+            <p>Test2</p>
             Answer:block
         </div>
     </div>
     <div data-ns-test="block-inline-h1">
         <div>
-            <h1>test1</h1>
-            <h1>test2</h1>
+            <h1>Test1</h1>
+            <h1>Test2</h1>
             Answer:block
         </div>
     </div>
     <div data-ns-test="block-inline-sup">
         <div>
-            <sup>test1</sup>
-            <sup>test2</sup>
+            <sup>Test1</sup>
+            <sup>Test2</sup>
             Answer:inline
         </div>
     </div>
     <div data-ns-test="block-inline-sub">
         <div> 
-           <sub>test1</sub>
-           <sub>test2</sub>
+           <sub>Test1</sub>
+           <sub>Test2</sub>
             Answer:inline:
        </div>
     </div>
