--- a/main.html
+++ b/main.html
@@ -10,8 +10,12 @@
 	<!-- the entire body must be written by student -->
 	<div data-ns-test="block-inline-button">
         <div>
+            <div>
             <button>Test1</button>
+            </div>
+            <div> 
             <button>Test2</button>
+            </div>
              Answer:inline
         </div>
     </div>
