--- a/main.html
+++ b/main.html
@@ -5,92 +5,62 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+ 
 <body>
 	<!-- the entire body must be written by student -->
 	<div data-ns-test="block-inline-button">
-        <div>
-            <div>
-            <button>Test1</button>
-            </div>
-            <div> 
-            <button>Test2</button>
-            </div>
-             Answer:inline
-        </div>
-    </div>
-    <div data-ns-test="block-inline-div">
-        <div>
-            <div>Test1</div>
-            <div>Test2</div>
-            Answer:block
-        
-        </div>
-    </div>
+		<button>Test1</button>
+	    <button>Test2</button>
+	    Answer: Inline
+	</div>
+	<div data-ns-test="block-inline-div">
+		<div>Test1</div>
+	    <div>Test2</div>
+	    Answer: Block
+	</div>
     <div data-ns-test="block-inline-span">
-        <div>
-            <span>Test1</span>
-            <span>Test2</span>
-            Answer:inline
-        </div>
-    </div>
-    <div data-ns-test="block-inline-p">
-         <div>
-            <p>Test1</p>
-            <p>Test2</p>
-            Answer:block
-         </div>
-    </div>
-    <div data-ns-test="block-inline-input">
-        <div>
-            <input type="text" name="Test1">
-            <input type="text" name="Test2">
-            Answer:inline
-        </div>
-    </div>
-    <div data-ns-test="block-inline-cite">
-        <div>
-            <cite>Test1</cite>
-            <cite>Test2</cite>
-            Answer:inline
-        </div>
-    </div>
-    <div data-ns-test="block-inline-cite">
-        <div>
-            <code>Test1</code>
-            <code>Test2</code>
-            Answer:inline
-        </div>
-    </div>
-    <div data-ns-test="block-inline-p">
-        <div>
-            <p>Test1</p>
-            <p>Test2</p>
-            Answer:block
-        </div>
-    </div>
-    <div data-ns-test="block-inline-h1">
-        <div>
-            <h1>Test1</h1>
-            <h1>Test2</h1>
-            Answer:block
-        </div>
-    </div>
-    <div data-ns-test="block-inline-sup">
-        <div>
-            <sup>Test1</sup>
-            <sup>Test2</sup>
-            Answer:inline
-        </div>
-    </div>
-    <div data-ns-test="block-inline-sub">
-        <div> 
-           <sub>Test1</sub>
-           <sub>Test2</sub>
-            Answer:inline:
-       </div>
-    </div>
-    <script type="text/javascript" src="./script.js">
+		<span>Test1</span>
+	    <span>Test2</span>
+	    Answer: Inline
+	</div>
+	<div data-ns-test="block-inline-p">
+		<p>Test1</p>
+		<p>Test2</p>
+		Answer: Block
+	</div>
+	<div data-ns-test="block-inline-input">
+		<input>Test1
+		<input>Test2
+		Answer: Inline
+	</div>
+	<div data-ns-test="block-inline-cite">
+		<cite>Test1</cite>
+		<cite>Test2</cite>
+		Answer: Inline
+	</div>
+	<div data-ns-test="block-inline-code">
+		<code>Test1</code>
+		<code>Test2</code>
+		Answer: Inline
+	</div>
+	<div data-ns-test="block-inline-h1">
+		<h1>Test1</h1>
+		<h1>Test2</h1>
+		Answer: Block
+	</div>
+	<div data-ns-test="block-inline-sup">
+		<sup>Test1</sup>
+		<sup>Test2</sup>
+		Answer: Inline
+	</div>
+	<div data-ns-test="block-inline-sub">
+		<sub>Test1</sub>
+		<sub>Test2</sub>
+		Answer: Inline
+	</div>
+
+<script type="text/javascript" src="./script.js">
+
 </script>
 
 </body>
